getting close to generalized algorithm

--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "test": "jest --silent=false",
     "test:e2e": "echo 'Run e2e Tests'",
     "build": "pnpm exec tsc",
-    "start": "node dist/dev.js",
-    "clean": "rm -Rf rawData && rm -Rf transformedData && rm -fr dist/",
-    "dev": "pnpm run clean && pnpm test && pnpm build && pnpm start"
+    "clean": "rm -Rf rawData && rm -Rf transformedData && rm -fr dist/"
   },
   "keywords": [
     "pesto",
