I have now the generalized algorithm: we need to add more test cases to fully cover all zod functions support. We also need to update docs and README. We also need to change the git repository. We also need to complete method renaming. We also need to replace any console.log with winston logging silenced by default. Finally adding some speed automated tests.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pesto-io/pesto-zod",
+  "name": "@pesto-io/zod-reify",
   "version": "0.0.1-alpha",
   "description": "Pesto module to intantiate zod schema from Typescript source code as string.",
   "main": "dist/index.js",
