--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
     "dev:docs:html": "pnpm run gen:api-docs && serve docs/",
     "dev:docs": "pnpm run gen:api-docs && pnpm exec serve docs/",
     "test": "jest --silent=false",
+    "test:report:junit": "jest --ci --reporters=default --reporters=jest-junit",
+    "test:report":"bash -c  \"if [ -f ./junit.xml ]; then rm junit.xml; fi;\" && bash -c \"pnpm run 'test:report:junit'\"",
+    "gen:unit:tests:report:json": "bash -c \"pnpm run 'test:report'\" && bash -c  \"if [ -f ./jest.junit.report.json ]; then rm ./jest.junit.report.json; fi;\" && pnpx junit2json junit.xml | jq . | tee -a jest.junit.report.json && cp ./jest.junit.report.json documentation/astro/src/content/tests-report/unit-tests && rm junit.xml && rm ./jest.junit.report.json",
+    "gen:unit:tests:report:zod": "bash -c  \"if [ -f ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json ]; then rm ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json; fi;\" && bash -c  \"if [ -f ./documentation/astro/src/schemas/unit.tests.report.schema.ts ]; then rm ./documentation/astro/src/schemas/unit.tests.report.schema.ts; fi;\" && pnpm exec json-to-zod -s documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json -t documentation/astro/src/schemas/unit.tests.report.schema.ts",
+    "gen:unit:tests:report:astro": "bash -c \"pnpm run 'gen:unit:tests:report:json'\" && bash -c \"pnpm run 'gen:unit:tests:report:zod'\"",
     "test:logs": "touch ./betterExperiment.logs && rm ./betterExperiment.logs && bash -c 'pnpm run test >>./betterExperiment.logs 2>&1'",
     "test:e2e": "echo 'Run e2e Tests'",
     "build": "pnpm exec tsc",
@@ -62,7 +67,9 @@
     "highlight.js": "^11.9.0",
     "htmlparser2": "^9.1.0",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "json-to-zod": "^1.1.2",
+    "junit2json": "^3.1.12",
     "markdown-it": "^14.1.0",
     "react-html-parser": "^2.0.2",
     "rehype": "^13.0.1",
