I have now the generalized algorithm: all test cases now pass + jest test report in astro website + just the package json command to fix for my home windows with bash -c wrappers

--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
     "gen:api-docs:md": "pnpm run clean:api-docs:astro && pnpm exec typedoc ./src/index.ts --out documentation/astro/src/content/api-docs/  --tsconfig ./tsconfig.json --plugin typedoc-plugin-markdown --plugin typedoc-plugin-frontmatter",
     "gen:api-docs:astro": "pnpm run clean:api-docs:astro && pnpm run gen:api-docs:json && pnpm run gen:api-docs:zod",
     "gen:api-docs": "pnpm run clean:api-docs && pnpm run gen:api-docs:html",
-    "build:docs:astro": "pnpm i --frozen-lockfile && pnpm run gen:api-docs:astro && cd documentation/astro/ && pnpm i --frozen-lockfile && pnpm run build",
-    "dev:docs:astro": "pnpm run gen:api-docs:astro && cd documentation/astro/ && pnpm run dev",
+    "build:docs:astro": "bash -c \"pnpm i --frozen-lockfile\" && bash -c \"pnpm gen:unit:tests:report:astro\" && bash -c \"pnpm run gen:api-docs:astro\" && cd documentation/astro/ && bash -c \"pnpm i --frozen-lockfile\" && bash -c \"pnpm run build\"",
+    "dev:docs:astro": "pnpm gen:unit:tests:report:astro && pnpm run gen:api-docs:astro && cd documentation/astro/ && pnpm run dev",
     "dev:docs:html": "pnpm run gen:api-docs && serve docs/",
     "dev:docs": "pnpm run gen:api-docs && pnpm exec serve docs/",
     "test": "jest --silent=false",
     "test:report:junit": "jest --ci --reporters=default --reporters=jest-junit",
     "test:report":"bash -c  \"if [ -f ./junit.xml ]; then rm junit.xml; fi;\" && bash -c \"pnpm run 'test:report:junit'\"",
-    "gen:unit:tests:report:json": "bash -c \"pnpm run 'test:report'\" && bash -c  \"if [ -f ./jest.junit.report.json ]; then rm ./jest.junit.report.json; fi;\" && pnpx junit2json junit.xml | jq . | tee -a jest.junit.report.json && cp ./jest.junit.report.json documentation/astro/src/content/tests-report/unit-tests && rm junit.xml && rm ./jest.junit.report.json",
-    "gen:unit:tests:report:zod": "bash -c  \"if [ -f ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json ]; then rm ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json; fi;\" && bash -c  \"if [ -f ./documentation/astro/src/schemas/unit.tests.report.schema.ts ]; then rm ./documentation/astro/src/schemas/unit.tests.report.schema.ts; fi;\" && pnpm exec json-to-zod -s documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json -t documentation/astro/src/schemas/unit.tests.report.schema.ts",
+    "gen:unit:tests:report:json": "bash -c \"pnpm run 'test:report'\" && bash -c  \"if [ -f ./jest.junit.report.json ]; then rm ./jest.junit.report.json; fi;\" && bash -c  \"if [ -f ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json ]; then rm ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json; fi;\" && pnpx junit2json junit.xml | jq . | tee -a jest.junit.report.json && cp ./jest.junit.report.json documentation/astro/src/content/tests-report/unit-tests && rm junit.xml && cp ./jest.junit.report.json documentation/astro/src/content/tests-report/unit-tests/ && rm ./jest.junit.report.json",
+    "gen:unit:tests:report:zod": "bash -c  \"if [ -f ./documentation/astro/src/schemas/unit.tests.report.schema.ts ]; then rm ./documentation/astro/src/schemas/unit.tests.report.schema.ts; fi;\" && pnpm exec json-to-zod -s documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json -t documentation/astro/src/schemas/unit.tests.report.schema.ts",
     "gen:unit:tests:report:astro": "bash -c \"pnpm run 'gen:unit:tests:report:json'\" && bash -c \"pnpm run 'gen:unit:tests:report:zod'\"",
     "test:logs": "touch ./betterExperiment.logs && rm ./betterExperiment.logs && bash -c 'pnpm run test >>./betterExperiment.logs 2>&1'",
     "test:e2e": "echo 'Run e2e Tests'",
