I have now the generalized algorithm: all test cases now pass + jest test report in astro website + just the package json command to fix for my home windows with bash -c wrappers

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gen:api-docs:astro": "pnpm run clean:api-docs:astro && pnpm run gen:api-docs:json && pnpm run gen:api-docs:zod",
     "gen:api-docs": "pnpm run clean:api-docs && pnpm run gen:api-docs:html",
     "build:docs:astro": "bash -c \"pnpm i --frozen-lockfile\" && bash -c \"pnpm gen:unit:tests:report:astro\" && bash -c \"pnpm run gen:api-docs:astro\" && cd documentation/astro/ && bash -c \"pnpm i --frozen-lockfile\" && bash -c \"pnpm run build\"",
+    "build:docs:astro:prod": "bash -c \"pnpm i --frozen-lockfile\" && bash -c \"pnpm gen:unit:tests:report:astro:prod\" && bash -c \"pnpm run gen:api-docs:astro\" && cd documentation/astro/ && bash -c \"pnpm i --frozen-lockfile\" && bash -c \"pnpm run build\"",
     "dev:docs:astro": "pnpm gen:unit:tests:report:astro && pnpm run gen:api-docs:astro && cd documentation/astro/ && pnpm run dev",
     "dev:docs:html": "pnpm run gen:api-docs && serve docs/",
     "dev:docs": "pnpm run gen:api-docs && pnpm exec serve docs/",
@@ -36,9 +37,12 @@
     "test:report:junit": "jest --ci --reporters=default --reporters=jest-junit",
     "test:report":"bash -c  \"if [ -f ./junit.xml ]; then rm junit.xml; fi;\" && bash -c \"pnpm run 'test:report:junit'\"",
     "gen:unit:tests:report:json": "bash -c \"pnpm run 'test:report'\" && bash -c  \"if [ -f ./jest.junit.report.json ]; then rm ./jest.junit.report.json; fi;\" && bash -c  \"if [ -f ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json ]; then rm ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json; fi;\" && pnpx junit2json junit.xml | jq . | tee -a jest.junit.report.json && cp ./jest.junit.report.json documentation/astro/src/content/tests-report/unit-tests/ && rm junit.xml && rm ./jest.junit.report.json",
+    "gen:unit:tests:report:json:prod": "bash -c \"pnpm run 'test:report'\" && bash -c  \"if [ -f ./jest.junit.report.json ]; then rm ./jest.junit.report.json; fi;\" && bash -c  \"if [ -f ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json ]; then rm ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json; fi;\" && pnpx junit2json junit.xml | tee -a jest.junit.report.json && cp ./jest.junit.report.json documentation/astro/src/content/tests-report/unit-tests/ && rm junit.xml && rm ./jest.junit.report.json",
     "gen:unit:tests:report:json:debug": "cat documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json | jq .",
     "gen:unit:tests:report:zod": "bash -c \"pnpm run gen:unit:tests:report:json:debug\" && bash -c  \"if [ -f ./documentation/astro/src/schemas/unit.tests.report.schema.ts ]; then rm ./documentation/astro/src/schemas/unit.tests.report.schema.ts; fi;\" && pnpm exec json-to-zod -s documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json -t documentation/astro/src/schemas/unit.tests.report.schema.ts",
+    "gen:unit:tests:report:zod:prod": "bash -c  \"if [ -f ./documentation/astro/src/schemas/unit.tests.report.schema.ts ]; then rm ./documentation/astro/src/schemas/unit.tests.report.schema.ts; fi;\" && pnpm exec json-to-zod -s documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json -t documentation/astro/src/schemas/unit.tests.report.schema.ts",
     "gen:unit:tests:report:astro": "bash -c \"pnpm run 'gen:unit:tests:report:json'\" && bash -c \"pnpm run 'gen:unit:tests:report:zod'\"",
+    "gen:unit:tests:report:astro:prod": "bash -c \"pnpm run 'gen:unit:tests:report:json:prod'\" && bash -c \"pnpm run 'gen:unit:tests:report:zod:prod'\"",
     "test:logs": "touch ./betterExperiment.logs && rm ./betterExperiment.logs && bash -c 'pnpm run test >>./betterExperiment.logs 2>&1'",
     "test:e2e": "echo 'Run e2e Tests'",
     "build": "pnpm exec tsc",
