added a few more tes case

--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
   "scripts": {
     "clean:api-docs:astro": "chmod +x ./.npm.scripts/astro-docs/clean.sh && bash ./.npm.scripts/astro-docs/clean.sh",
     "clean:api-docs": "chmod +x ./.npm.scripts/docs/clean.sh && bash ./.npm.scripts/docs/clean.sh",
-    "gen:api-docs:html": "pnpm run clean:api-docs:astro && pnpm exec typedoc ./src/index.ts --out ./docs/  --tsconfig ./tsconfig.json",
-    "gen:api-docs:json": "pnpm run clean:api-docs:astro && pnpm exec typedoc ./src/index.ts  --tsconfig ./tsconfig.json --json documentation/astro/src/content/api-docs/data.json",
-    "gen:api-docs:zod": "pnpm exec json-to-zod -s documentation/astro/src/content/api-docs/data.json -t documentation/astro/src/schemas/api-docs.zod.ts",
-    "gen:api-docs:md": "pnpm run clean:api-docs:astro && pnpm exec typedoc ./src/index.ts --out documentation/astro/src/content/api-docs/  --tsconfig ./tsconfig.json --plugin typedoc-plugin-markdown --plugin typedoc-plugin-frontmatter",
-    "gen:api-docs:astro": "pnpm run clean:api-docs:astro && pnpm run gen:api-docs:json && pnpm run gen:api-docs:zod",
-    "gen:api-docs": "pnpm run clean:api-docs && pnpm run gen:api-docs:html",
+    "gen:api-docs:html": "bash -c 'pnpm run clean:api-docs:astro && pnpm exec typedoc ./src/index.ts --out ./docs/  --tsconfig ./tsconfig.json'",
+    "gen:api-docs:json": "bash -c \"pnpm run clean:api-docs:astro && pnpm exec typedoc ./src/index.ts  --tsconfig ./tsconfig.json --json documentation/astro/src/content/api-docs/data.json \"",
+    "gen:api-docs:zod": "bash -c 'pnpm exec json-to-zod -s documentation/astro/src/content/api-docs/data.json -t documentation/astro/src/schemas/api-docs.zod.ts'",
+    "gen:api-docs:md": "bash -c 'pnpm run clean:api-docs:astro && pnpm exec typedoc ./src/index.ts --out documentation/astro/src/content/api-docs/  --tsconfig ./tsconfig.json --plugin typedoc-plugin-markdown --plugin typedoc-plugin-frontmatter'",
+    "gen:api-docs:astro": "bash -c 'pnpm run clean:api-docs:astro' && bash -c 'pnpm run gen:api-docs:json' && bash -c 'pnpm run gen:api-docs:zod'",
+    "gen:api-docs": "bash -c 'pnpm run clean:api-docs' && bash -c 'pnpm run gen:api-docs:html'",
     "build:docs:astro": "bash -c \"pnpm i --frozen-lockfile\" && bash -c \"pnpm gen:unit:tests:report:astro\" && bash -c \"pnpm run gen:api-docs:astro\" && cd documentation/astro/ && bash -c \"pnpm i --frozen-lockfile\" && bash -c \"pnpm run build\"",
     "build:docs:astro:prod": "bash -c \"pnpm i --frozen-lockfile\" && bash -c \"pnpm gen:unit:tests:report:astro:prod\" && bash -c \"pnpm run gen:api-docs:astro\" && cd documentation/astro/ && bash -c \"pnpm i --frozen-lockfile\" && bash -c \"pnpm run build\"",
-    "dev:docs:astro": "pnpm gen:unit:tests:report:astro && pnpm run gen:api-docs:astro && cd documentation/astro/ && pnpm run dev",
-    "dev:docs:html": "pnpm run gen:api-docs && serve docs/",
-    "dev:docs": "pnpm run gen:api-docs && pnpm exec serve docs/",
+    "dev:docs:astro": "bash -c 'pnpm gen:unit:tests:report:astro' && bash -c 'pnpm run gen:api-docs:astro' && cd documentation/astro/ && bash -c 'pnpm run dev'",
+    "dev:docs:html": "bash -c 'pnpm run gen:api-docs && serve docs/'",
+    "dev:docs": "bash -c 'pnpm run gen:api-docs && pnpm exec serve docs/'",
     "test": "jest --silent=false",
     "test:report:junit": "jest --ci --reporters=default --reporters=jest-junit",
     "test:report":"bash -c  \"if [ -f ./junit.xml ]; then rm junit.xml; fi;\" && bash -c \"pnpm run 'test:report:junit'\"",
-    "gen:unit:tests:report:json": "bash -c \"pnpm run 'test:report'\" && bash -c  \"if [ -f ./jest.junit.report.json ]; then rm ./jest.junit.report.json; fi;\" && bash -c  \"if [ -f ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json ]; then rm ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json; fi;\" && pnpx junit2json junit.xml | jq . | tee -a jest.junit.report.json && cp ./jest.junit.report.json documentation/astro/src/content/tests-report/unit-tests/ && rm junit.xml && rm ./jest.junit.report.json",
-    "gen:unit:tests:report:json:prod": "bash -c \"pnpm run 'test:report'\" && bash -c  \"if [ -f ./jest.junit.report.json ]; then rm ./jest.junit.report.json; fi;\" && bash -c  \"if [ -f ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json ]; then rm ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json; fi;\" && pnpx junit2json junit.xml | tee -a jest.junit.report.json && cp ./jest.junit.report.json documentation/astro/src/content/tests-report/unit-tests/ && rm junit.xml && rm ./jest.junit.report.json",
+    "gen:unit:tests:report:json": "bash -c \"pnpm run 'test:report'\" && bash -c  \"if [ -f ./jest.junit.report.json ]; then rm ./jest.junit.report.json; fi;\" && bash -c  \"if [ -f ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json ]; then rm ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json; fi;\" && pnpm exec junit2json junit.xml | jq . | tee -a jest.junit.report.json && cp ./jest.junit.report.json documentation/astro/src/content/tests-report/unit-tests/ && rm junit.xml && rm ./jest.junit.report.json",
+    "gen:unit:tests:report:json:prod": "bash -c \"pnpm run 'test:report'\" && bash -c  \"if [ -f ./jest.junit.report.json ]; then rm ./jest.junit.report.json; fi;\" && bash -c  \"if [ -f ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json ]; then rm ./documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json; fi;\" && pnpm exec junit2json junit.xml | tee -a jest.junit.report.json && cp ./jest.junit.report.json documentation/astro/src/content/tests-report/unit-tests/ && rm junit.xml && rm ./jest.junit.report.json",
     "gen:unit:tests:report:json:debug": "cat documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json | jq .",
     "gen:unit:tests:report:zod": "bash -c \"pnpm run gen:unit:tests:report:json:debug\" && bash -c  \"if [ -f ./documentation/astro/src/schemas/unit.tests.report.schema.ts ]; then rm ./documentation/astro/src/schemas/unit.tests.report.schema.ts; fi;\" && pnpm exec json-to-zod -s documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json -t documentation/astro/src/schemas/unit.tests.report.schema.ts",
     "gen:unit:tests:report:zod:prod": "bash -c  \"if [ -f ./documentation/astro/src/schemas/unit.tests.report.schema.ts ]; then rm ./documentation/astro/src/schemas/unit.tests.report.schema.ts; fi;\" && pnpm exec json-to-zod -s documentation/astro/src/content/tests-report/unit-tests/jest.junit.report.json -t documentation/astro/src/schemas/unit.tests.report.schema.ts",
@@ -45,7 +45,7 @@
     "gen:unit:tests:report:astro:prod": "bash -c \"pnpm run 'gen:unit:tests:report:json:prod'\" && bash -c \"pnpm run 'gen:unit:tests:report:zod:prod'\"",
     "test:logs": "touch ./betterExperiment.logs && rm ./betterExperiment.logs && bash -c 'pnpm run test >>./betterExperiment.logs 2>&1'",
     "test:e2e": "echo 'Run e2e Tests'",
-    "build": "pnpm exec tsc",
+    "build": "bash  -c 'pnpm exec tsc'",
     "clean": "rm -Rf rawData && rm -Rf transformedData && rm -fr dist/"
   },
   "keywords": [
