--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
     <<: *jobs-commons
     environment:
       BASH_ENV: /home/circleci/.profile
-      # PNPM_VERSION: << pipeline.parameters.pnpm_version >>
+      PNPM_VERSION: << pipeline.parameters.pnpm_version >>
     steps:
       - run:
           name: "System setup"
